# 0072

./: .gitmodules  README.md
.obsolete/docs/mc3/: Marlin_3D_Master-10.04.2015.7z  Конфигурация Сплайсера - MC3_Master_PLA.rcp
.obsolete/fw/grbl-uno/: wiring-mod.c
.obsolete/openscad/: arc.scad  bezier.scad
.obsolete/openscad/1602/: example.scad
.obsolete/pr/mc3/: tube-endstop.stl
.obsolete/pr/mcpp/: CMakeLists.txt  auto_generated_ctors.cxx  main.cxx  traces.cxx
.obsolete/pr/p902/: aero-titan-mount.scad  filamentguide.stl  p902-tn-sink-fan-30.stl  p902-tn-sink-fan.stl
.obsolete/pr/parts/: Fan_Duct_2_E3D_V6_fixed.stl  Fan_Duct_3_tiny_v3_fixed_NoText.STL  Fan_Duct_5_E3D_v5_40.stl  LM8UU-24_Rev2.stl  Z_Coupler.stl  chamfers.scad
.obsolete/pr/советский-corexy/: Z-Axis-EndStop-Mount.stl  Z-EndStop-Bed-Upper-Mount.stl  Z-Motor-Mount-MK2.stl
3d-printed-parts/2020-x/: 2020-round-wire-mnt-10-7.stl  2020-round-wire-mnt-15-7.stl  2020-round-wire-mnt-25-10.stl  2020-round-wire-mnt-5-7.stl  2020-round-wire-mnt-7-7.stl  2020-round-wire-mnt-small.STL  2020_V-Slot_square_cable_holder_-_v2.stl  T-Nut_M4.STL
3d-printer/ender-3/: README.md
3d-printer/ender-3/endstops/: z-mech-endstop-s1.fcstd
fw/bootscreen/: _Bootscreen.h  _Customs.h
fw/cnc-shield/driver-motor-bench/: platformio.ini
fw/grbl-uno/src/: lcd.cpp  main.c
fw/marlin-gfx/: sapphire-pro-boot-screen.h  sm-star.psd
fw/mc3/Marlin_MC3_STALIN_My/: Configuration.h
fw/p902-marlin-1.1.8/Marlin/: Configuration.h  Configuration_adv.h
fw/p902-marlin-1.1.9/: TODO
fw/p902-marlin-1.1.9/src/: Configuration.h  Configuration_adv.h  Version.h
fw/sapphire-pro-marlin/: platformio.ini
fw/sapphire-pro-marlin-10-2019/: README-my.md  README.md  platformio.ini
obsolete/: README.md
obsolete/openscad/: Pin_header.scad  Prototyping_platform.scad
obsolete/reprap/: 2GT 20B5.SLDPRT
openscad/: OLED_169_160_128.scad  allen_wrenches.scad  bezier-eh.scad  electronic_packages.scad
openscad/1602/: README.txt
pr/a-sovietxy-backup/: box-4old.scad  x_carriage_directdrive_enhanced.scad  x_carriage_lda_v1.3.scad  x_carriage_mess.scad  x_end-nuts-16x25lm8uu.stl  x_end.scad  y-end-stops.stl  y_end_stop_x2.stl  z-config.scad  z-e3d-v5-fan-duct-40mm.scad  z-fan-2-duct.stl  z-plane.scad  z-sink-fan.stl  z.scad
pr/mcpp/: .gitignore  CMakeLists.txt  async_1.cxx  curve_brackets_init.cxx  dumps.hxx  main.cxx  make-sln.cmd  smart_ptr_dumps.cxx  smart_ptr_sizes.cxx  stdafx.h  template_type_deduction.cxx  traces.cxx  traces.hxx  unique_ptr_sizes.cxx  uref_overloads.cxx
pr/p902/: funbox3.stl  p902-tn-fan-duct.stl  p902-tn-mount.stl  titan-common.scad  titan-mount.json  titan-mount.scad
pr/parts/: 80mm Radial Fan.STEP  CCCPqs.stl  CoolingFan.stl  E3D_v6_1.75mm_Universal.stl  E3D_v6_To_Spec.stl  Fan_Duct_3_tiny_v3_fixed.stl  PC4-M6.STL  PM_E3D_V5_fan_holder.stl  chamfers.scad  e3d-duct.STL  e3d-duct.sldprt  e3d_v5_fanduct.STL  fan_30mm.stl  fans.scad  optical_endstop_1.STL  skr13_v1.stl  sm.scad  sm.stl
pr/soviet-corexy/: Bed-Spring-Base.stl  README.md  Z-Axis-EndStop-Bolt-Mount.stl
pr/sovietxy/: SovietCoreXY.max  SovietCoreXY.scad  bconf.scad  belt_tensioner.stl  big_version.scad  clamp_e3d_v5_liftdown_adapter.stl  e3d_v5_dd_clamp.stl  e3d_v5_liftdown_adapter.scad  e3d_v5_liftdown_adapter.stl  e3d_v5_liftdown_adapter_wclamp.stl  e3d_v5_liftdown_clamp.stl  frame_cst.scad  sa-fan-duct.scad  sovietxy.max  x-axis-check.scad  x_belt_clamp.scad  x_carriage-16x25lm8uu-v1.2.stl  x_carriage-16x25lm8uu-wlda-v1.3.stl  x_carriage-16x25lm8uu.scad  x_carriage-16x25lm8uu.stl  x_carriage-16x25lm8uu_holes.stl  x_carriage-one-half-draft.stl  x_carriage-test.stl  x_carriage-top.stl  x_carriage-wlda-clamp-v1.3.stl  x_carriage.scad  x_carriage_ao.scad  x_carriage_directdrive_enhanced.scad  x_carriage_directdrive_enhanced.stl  x_carriage_directdrive_enhanced_no_chain_mount.stl  x_carriage_e3d_v5_liftdown_adapter.stl  x_carriage_lda_v1.3.scad  x_carriage_mess.scad  x_carriage_open.scad  x_carriage_orig_enh.scad  x_carriage_top.scad  x_carriage_top_w2_endstops.stl  x_end-bolts-16x25lm8uu.stl  x_end-nuts-16x25lm8uu.stl  x_end.scad  (+14 more)
pr/sovietxy-S.T.E.V.E/: z-s.scad
pr/spro-temp/: bed-glass-clamps.scad  bed-support-1.stl
pr/советский-corexy/: Bed-2020-Helper.stl  Bed-Frame-2020-Connector.stl  Bed-Knob.stl  Bed-TR8-LM8UUx4.stl  Bed-bearing-holder-16x24.stl  Z-EndStop-Term-2020-Clamp.stl  Z-EndStop-Top-Term-Screw.stl  Z-Frame-Helpers v6.stl  Z-Motor-Base-MK1.stl  Z-Rods-608ZZ-Top-Mount.stl
pr/советский-corexy-v2/: LM8UU-Custom.scad  Rods-Custom.scad  X-Car.scad
reprap/: Nema 17HS4401-S.SLDPRT
reprap/2020/: 2020 alu section v1.step
v/mels/: mel.psd
(+469 files in other folders)
